unpackaged/main/default/objects/Contact/fields/Accepting_New_Patients__c.field-meta.xml
<CustomField>
    <fullName>Accepting_New_Patients__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if this Patient Navigator is accepting new Patients or not</description>
    <label>Accepting New Patients</label>
    <type>Checkbox</type>
</CustomField>