unpackaged/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Auto Calculate Age from Date of Birth</description>
    <formula>IF( ISBLANK(Birthdate ) , null, FLOOR((TODAY()-Birthdate +1)/365.2425))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>