unpackaged/main/default/objects/Contact/fields/Age_Num__c.field-meta.xml
<CustomField>
    <fullName>Age_Num__c</fullName>
    <formula>VALUE(
If(ISBLANK(HealthCloudGA__DeceasedDate__c),

IF( NOT( ISBLANK( Birthdate ) ) , TEXT(IF( NOT( ISBLANK( Birthdate ) ) ,
IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
YEAR (Today()) - YEAR ( Birthdate ),
YEAR (Today()) - YEAR ( Birthdate ) -1 ),
null)), &apos;&apos;),

IF( NOT( ISBLANK( Birthdate ) ) , TEXT(IF( NOT( ISBLANK( Birthdate ) ) ,
IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( HealthCloudGA__DeceasedDate__c ) , DAY( HealthCloudGA__DeceasedDate__c ) ),
YEAR (HealthCloudGA__DeceasedDate__c) - YEAR ( Birthdate ),
YEAR (HealthCloudGA__DeceasedDate__c) - YEAR ( Birthdate ) -1 ),
null)), &apos;&apos;)

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>