unpackaged/main/default/objects/Contact/fields/Always_True__c.field-meta.xml
<CustomField>
    <fullName>Always_True__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Always True</label>
    <type>Checkbox</type>
</CustomField>