unpackaged/main/default/objects/Contact/fields/Annual_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Household_Income__c</fullName>
    <label>Annual Household Income</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>