unpackaged/main/default/objects/Contact/fields/Breast_Health_topics_on_your_mind__c.field-meta.xml
<CustomField>
    <fullName>Breast_Health_topics_on_your_mind__c</fullName>
    <label>Breast Health topics on your mind?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screening &amp; Mammograms</fullName>
            </value>
            <value>
                <fullName>Diagnosis &amp; Treatment</fullName>
            </value>
            <value>
                <fullName>Metastatic Breast Cancer</fullName>
            </value>
            <value>
                <fullName>Financial Assistance</fullName>
            </value>
            <value>
                <fullName>Support &amp; Counseling</fullName>
            </value>
            <value>
                <fullName>Clinical Trials</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>