unpackaged/main/default/objects/Contact/fields/Care_Giver_Co_Survivor__c.field-meta.xml
<CustomField>
    <fullName>Care_Giver_Co_Survivor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Giver / Co-Survivor</label>
    <type>Checkbox</type>
</CustomField>