unpackaged/main/default/objects/Contact/fields/Contact_Link__c.field-meta.xml
<CustomField>
    <fullName>Contact_Link__c</fullName>
    <formula>&apos;/&apos;&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Link</label>
    <type>Text</type>
</CustomField>