unpackaged/main/default/objects/Contact/fields/CRM_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Org_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CRM Org ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>