unpackaged/main/default/objects/Contact/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <inlineHelpText>Who is this person&apos;s employer?</inlineHelpText>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>