unpackaged/main/default/objects/Contact/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <description>Taken from the NIH Grants site as the racial and ethnic categories they use.</description>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ethnicity</valueSetName>
    </valueSet>
</CustomField>