unpackaged/main/default/objects/Contact/fields/HealthCloudGA__Gender__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Gender Diverse</fullName>
            </value>
            <value>
                <fullName>Prefer Not to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>