unpackaged/main/default/objects/Contact/fields/Height_ft__c.field-meta.xml
<CustomField>
    <fullName>Height_ft__c</fullName>
    <label>Height (ft.)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>