unpackaged/main/default/objects/Contact/fields/Height_in__c.field-meta.xml
<CustomField>
    <fullName>Height_in__c</fullName>
    <description>Height in inches</description>
    <label>Height (in.)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>