unpackaged/main/default/objects/Contact/fields/Household_Size_Including_Patient__c.field-meta.xml
<CustomField>
    <fullName>Household_Size_Including_Patient__c</fullName>
    <label>Household Size (Including Patient)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>