unpackaged/main/default/objects/Contact/fields/How_do_you_like_to_give_back__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_like_to_give_back__c</fullName>
    <label>How do you like to give back?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Policy &amp; Advocacy</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Community Outreach</fullName>
            </value>
            <value>
                <fullName>Fundraising &amp; Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>