unpackaged/main/default/objects/Contact/fields/Is_Insured__c.field-meta.xml
<CustomField>
    <fullName>Is_Insured__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>true if contact is insured, false otherwise</description>
    <label>Is Insured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>