unpackaged/main/default/objects/Contact/fields/Literacy_Level__c.field-meta.xml
<CustomField>
    <fullName>Literacy_Level__c</fullName>
    <label>Literacy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Proficient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>