unpackaged/main/default/objects/Contact/fields/Mailing_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_Code__c</fullName>
    <formula>TEXT(MailingStateCode)</formula>
    <label>Mailing State Code</label>
    <type>Text</type>
</CustomField>