unpackaged/main/default/objects/Contact/fields/Mobile_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Opt In</label>
    <type>Checkbox</type>
</CustomField>