unpackaged/main/default/objects/Contact/fields/Multiple_Twin__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Twin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates the Patient is a multiple or twin.</description>
    <label>Multiple / Twin</label>
    <type>Checkbox</type>
</CustomField>