unpackaged/main/default/objects/Contact/fields/NPI_ID__c.field-meta.xml
<CustomField>
    <fullName>NPI_ID__c</fullName>
    <description>The NPI Number is the unique 10-digit National Provider Identifier assigned to the provider by the National Plan and Provider Enumeration System (NPPES)</description>
    <externalId>true</externalId>
    <label>NPI ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>