unpackaged/main/default/objects/Contact/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Administrative and Clerical</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Aerospace and Defense</fullName>
            </value>
            <value>
                <fullName>Agriculture, Forestry, and Fishing</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Arts and Entertainment</fullName>
            </value>
            <value>
                <fullName>Aviation and Airlines</fullName>
            </value>
            <value>
                <fullName>Banking and Financial Services</fullName>
            </value>
            <value>
                <fullName>Business Owner</fullName>
            </value>
            <value>
                <fullName>Clergy</fullName>
            </value>
            <value>
                <fullName>Construction and Landscaping</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Counseling</fullName>
            </value>
            <value>
                <fullName>Education and Training</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Executive/Management</fullName>
            </value>
            <value>
                <fullName>Facilities, Maintenance, and Repair</fullName>
            </value>
            <value>
                <fullName>Fire, Law Enforcement, and Security</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Homemaking</fullName>
            </value>
            <value>
                <fullName>Hotel, Gaming, Leisure, and Travel</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology (IT)</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Legal and Paralegal</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>