unpackaged/main/default/objects/Contact/fields/Organ_Donor__c.field-meta.xml
<CustomField>
    <fullName>Organ_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that the Contact is an Organ Donor</description>
    <label>Organ Donor</label>
    <type>Checkbox</type>
</CustomField>