unpackaged/main/default/objects/Contact/fields/Other_Preferred_Pronoun__c.field-meta.xml
<CustomField>
    <fullName>Other_Preferred_Pronoun__c</fullName>
    <description>Additional category
(Other Preferred Pronoun field for capture)</description>
    <label>Other Preferred Pronoun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>