unpackaged/main/default/objects/Contact/fields/Parent_Guardian_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Name__c</fullName>
    <description>If the Age is under 18, enter Parent/Guardian Name.</description>
    <label>If under 18, name of parent or guardian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>