unpackaged/main/default/objects/Contact/fields/Patient_Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Patient_Qualifications__c</fullName>
    <description>identifies the criteria a Patient must meet to qualify working with this Patient Navigator.</description>
    <label>Patient Qualifications</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>