unpackaged/main/default/objects/Contact/fields/Postal_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Postal_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postal Opt Out</label>
    <type>Checkbox</type>
</CustomField>