unpackaged/main/default/objects/Contact/fields/Preferred_Pronoun__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronoun__c</fullName>
    <label>Preferred Pronoun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>She/her/hers</fullName>
            </value>
            <value>
                <fullName>He/him/his</fullName>
            </value>
            <value>
                <fullName>They/them/theirs</fullName>
            </value>
            <value>
                <fullName>Ze/zir/zirs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>