unpackaged/main/default/objects/Contact/fields/Professional_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Professional_Suffix__c</fullName>
    <label>Professional Suffix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>