unpackaged/main/default/objects/Contact/fields/Relationship_To_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_Cancer__c</fullName>
    <description>Values set during initial onboarding to MyKomen Health</description>
    <label>Relationship To Cancer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relationship_To_Cancer</valueSetName>
    </valueSet>
</CustomField>