unpackaged/main/default/objects/Contact/fields/Rhesus_Negative__c.field-meta.xml
<CustomField>
    <fullName>Rhesus_Negative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Rh Factor is negative</description>
    <label>Rhesus Negative</label>
    <type>Checkbox</type>
</CustomField>