unpackaged/main/default/objects/Contact/fields/Sex_Assigned_at_Birth__c.field-meta.xml
<CustomField>
    <fullName>Sex_Assigned_at_Birth__c</fullName>
    <label>Sex (Assigned at Birth)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender</valueSetName>
    </valueSet>
</CustomField>