unpackaged/main/default/objects/Contact/fields/Social_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Social_Facebook__c</fullName>
    <inlineHelpText>Provide your &quot;@name&quot; for the Facebook network</inlineHelpText>
    <label>Instagram/Facebook Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>