unpackaged/main/default/objects/Contact/fields/Social_TikTok__c.field-meta.xml
<CustomField>
    <fullName>Social_TikTok__c</fullName>
    <inlineHelpText>Provide your &quot;@name&quot; for the TikTok network</inlineHelpText>
    <label>TikTok Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>