unpackaged/main/default/objects/Contact/fields/Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Handle__c</fullName>
    <inlineHelpText>Provide your &quot;@name&quot; for the Twitter network</inlineHelpText>
    <label>Twitter Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>