unpackaged/main/default/objects/Contact/fields/Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Status__c</fullName>
    <label>Veteran Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Veteran_Status</valueSetName>
    </valueSet>
</CustomField>