unpackaged/main/default/objects/Contact/fields/Who_should_navigator_work_with__c.field-meta.xml
<CustomField>
    <fullName>Who_should_navigator_work_with__c</fullName>
    <label>Who should navigator work with?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>