unpackaged/main/default/objects/Contact/fields/Years_of_Education_Completed__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Education_Completed__c</fullName>
    <label>Years of Education Completed</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>