unpackaged/main/default/objects/Contact/recordTypes/Patient_Navigator.recordType-meta.xml
<RecordType>
    <fullName>Patient_Navigator</fullName>
    <active>true</active>
    <description>Contact details for Patient Navigators</description>
    <label>Patient Navigator</label>
</RecordType>