unpackaged/main/default/objects/Contact/recordTypes/Provider.recordType-meta.xml
<RecordType>
    <fullName>Provider</fullName>
    <active>true</active>
    <description>A Provider of medical services, Doctor,  Nurse,  Therapist, etc</description>
    <label>Provider</label>
</RecordType>